Reorganized file directories. Added more webpages with routing. Added some code on server.js that may be a start for establishing out of network connections. Started working on discovery.js and transfer.js to add the functionalities intended.

--- a/FileSharingServerApplication/public/index.html
+++ b/FileSharingServerApplication/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
@@ -15,4 +15,4 @@
          <p>This is some sample text of where I will be putting a graphical user interface for the user to interact with on controlling the server.</p>
       </main>
    </body>
-</html>
+</html> -->
